--- a/viiilo/index.html
+++ b/viiilo/index.html
@@ -29,7 +29,7 @@
 <ul>
 	<li>Język koreański - poziom 1</li>
 	<li><a href="viiilo/zajecia/25-26/jk2">Język koreański - poziom 2</a></li>
-	<li>Język koreański - poziom 3</li>
+	<li><a href="viiilo/zajecia/25-26/jk3">Język koreański - poziom 3</a></li>
 </ul>
 
 <h3>rok szkolny 2024/2025</h3>
