--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -11,11 +11,11 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>한국어 고급</h1>
+<h1>한국어 3급</h1>
 
 <address>
-	Tomasz Wilczyński 교수<br>
-	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
+	토마쉬 빌츠니스키 교수<br>
+	연락처: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
 </address>
 
 <h2>2025/2026학년 시간표</h2>
@@ -77,47 +77,47 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">10</th>
 				<td>2025년 11월 20일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">11</th>
 				<td>2025년 11월 27일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">12</th>
 				<td>2025년 12월 4일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">18</th>
+				<th scope="row">13</th>
 				<td>2025년 12월 11일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">19</th>
+				<th scope="row">14</th>
 				<td>2025년 12월 18일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">20</th>
+				<th scope="row">15</th>
 				<td>2025년 1월 8일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">21</th>
+				<th scope="row">16</th>
 				<td>2025년 1월 15일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">22</th>
+				<th scope="row">17</th>
 				<td>2025년 1월 22일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">23</th>
+				<th scope="row">18</th>
 				<td>2025년 1월 29일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
