--- a/viiilo/zajecia/24-25z/jk2/zajecia/6-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/6-1/index.html
@@ -91,14 +91,22 @@
 <ul class="gallery">
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/1.%20一.png" alt="一"></li>
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/8.%20二.png" alt="二"></li>
-	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/9.%20人.png" alt="人"></li>
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/17.%20三.png" alt="三"></li>
-	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/18.%20上.png" alt="上"></li>
-	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/20.%20下.png" alt="下"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/9.%20人.png" alt="人"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/35.%20子.png" alt="子"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/34.%20女.png" alt="女"></li>
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/29.%20口.png" alt="口"></li>
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/33.%20大.png" alt="大"></li>
-	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/34.%20女.png" alt="女"></li>
-	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/35.%20子.png" alt="子"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/18.%20上.png" alt="上"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/20.%20下.png" alt="下"></li>
+</ul>
+
+<h2>Znaki chińskie cz. 2</h2>
+
+<ul class="gallery">
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/37.%20小.png" alt="小"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/38.%20山.png" alt="山"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/39.%20川.png" alt="川"></li>
 </ul>
 
 </body></html>
