--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -95,6 +95,8 @@
 			<tr>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2">높임법 (honoryfikatywność)</a></td>
 			</tr>
+		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>19 grudnia 2024</td>
@@ -103,17 +105,158 @@
 			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>10 stycznia 2024</td>
+				<td>10 stycznia 2025</td>
 				<td class="schedule-lecture">Lekcja 10</td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">11</th>
-				<td>17 stycznia 2024</td>
+				<td>17 stycznia 2025</td>
 				<td class="schedule-lecture">Lekcja 11</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6">06. 한국미술관까지 어떻게 가요?</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6">06. 한국미술관까지 어떻게 가요?</a></td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6-1">한자 (漢字, znaki chińskie)</a></td>
+			</tr>
+			<tr>
+				<th scope="row">12</th>
+				<td>14 lutego 2025</td>
+				<td class="schedule-lecture">Lekcja 12</td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6-2">설 (Nowy Rok)</a></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">13</th>
+				<td>21 lutego 2025</td>
+				<td class="schedule-lecture">Lekcja 13</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">14</th>
+				<td>28 lutego 2025</td>
+				<td class="schedule-lecture">Lekcja 14</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">15</th>
+				<td>7 marca 2025</td>
+				<td class="schedule-lecture">Lekcja 15</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">16</th>
+				<td>14 marca 2025</td>
+				<td class="schedule-lecture">Lekcja 16</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">17</th>
+				<td>21 marca 2025</td>
+				<td class="schedule-lecture">Lekcja 17</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">18</th>
+				<td>28 marca 2025</td>
+				<td class="schedule-lecture">Lekcja 18</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">19</th>
+				<td>4 kwietnia 2025</td>
+				<td class="schedule-lecture">Lekcja 19</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">20</th>
+				<td>11 kwietnia 2025</td>
+				<td class="schedule-lecture">Lekcja 20</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">21</th>
+				<td>25 kwietnia 2025</td>
+				<td class="schedule-lecture">Lekcja 21</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">22</th>
+				<td>16 maja 2025</td>
+				<td class="schedule-lecture">Lekcja 22</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">23</th>
+				<td>23 maja 2025</td>
+				<td class="schedule-lecture">Lekcja 23</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">24</th>
+				<td>30 maja 2025</td>
+				<td class="schedule-lecture">Lekcja 24</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">25</th>
+				<td>6 czerwca 2025</td>
+				<td class="schedule-lecture">Lekcja 25</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">26</th>
+				<td>13 czerwca 2025</td>
+				<td class="schedule-lecture">Lekcja 26</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">27</th>
+				<td>27 czerwca 2025</td>
+				<td class="schedule-lecture">Lekcja 27</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
 </body></html>
