--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -125,23 +125,23 @@
 				<td>2 grudnia 2025</td>
 				<td class="schedule-lecture">Zajęcia 8</td>
 			</tr>
+			<!-- <tr> -->
+				<!-- <th scope="row">9</th> -->
+				<!-- <td>9 grudnia 2025</td> -->
+				<!-- <td class="schedule-lecture">Zajęcia 9</td> -->
+				<!-- <td class="schedule-lecture"></td> -->
+			<!-- </tr> -->
 			<tr>
 				<th scope="row">9</th>
-				<td>9 grudnia 2025</td>
-				<td class="schedule-lecture">Zajęcia 9</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
 				<td>16 grudnia 2025</td>
-				<td class="schedule-lecture">Zajęcia 10</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Zajęcia 9</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/6">K-pop</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="5">11</th>
+				<th scope="row" rowspan="5">10</th>
 				<td rowspan="5">13 stycznia 2026</td>
 				<td class="schedule-exam">Kolokwium 2</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">malarstwo; propaganda, K-pop</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 1</td>
@@ -149,7 +149,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Alicja Kozłowska - Postać dziewczyny w białym ubraniu: koreańska „Cheonyeo Gwishin” (천녀귀신), a polska „Południca”, „Morowa Dziewica” i „Cicha”</td>
+				<td class="schedule-presentation">Alicja Kozłowska - Postać dziewczyny w białym ubraniu: koreańska „Cheonyeo Gwisin” (천녀귀신), a polska „Południca”, „Morowa Dziewica” i „Cicha”</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
@@ -160,7 +160,7 @@
 				<td class="schedule-presentation">Łukasz Jeruzal</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="5">12</th>
+				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">20 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 5</td>
 				<td class="schedule-presentation">Paweł Opyrchał</td>
@@ -182,7 +182,7 @@
 				<td class="schedule-presentation">Oliwia Kowalczyk</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="6">13</th>
+				<th scope="row" rowspan="6">12</th>
 				<td rowspan="6">27 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 10</td>
 				<td class="schedule-presentation">Matylda Rzadkowska</td>
@@ -193,7 +193,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
-				<td class="schedule-presentation">Emil Baran</td>
+				<td class="schedule-presentation">Emil Baran - Powstanie państwa koreańskiego i polskiego na podstawie mitu o Dangunie i legendy o Lechu, Czechu i Rusie</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 13</td>
