--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -104,11 +104,11 @@
 				<th rowspan="2" scope="row">6</th>
 				<td rowspan="2">18 November 2025</td>
 				<td class="schedule-exam">Test 1</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Introduction; Four Books, Korean Language</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Lecture 6</td>
-				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/licc/lectures/4">Korean Family</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/25-26z/licc/lectures/4">Korean Family</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
@@ -119,25 +119,24 @@
 				<th scope="row">8</th>
 				<td>2 December 2025</td>
 				<td class="schedule-lecture">Lecture 8</td>
-				<td class="schedule-lecture"></td>
 			</tr>
+			<!-- <tr> -->
+				<!-- <th scope="row">9</th> -->
+				<!-- <td>9 December 2025</td> -->
+				<!-- <td class="schedule-lecture">Lecture 9</td> -->
+				<!-- <td class="schedule-lecture"></td> -->
+			<!-- </tr> -->
 			<tr>
 				<th scope="row">9</th>
-				<td>9 December 2025</td>
-				<td class="schedule-lecture">Lecture 9</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
 				<td>16 December 2025</td>
 				<td class="schedule-lecture">Lecture 10</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/5">Greeting and Etiquette</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="5">11</th>
+				<th scope="row" rowspan="5">10</th>
 				<td rowspan="5">13 January 2026</td>
 				<td class="schedule-exam">Test 2</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Korean Family; Greeting and Etiquette</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 1</td>
@@ -193,7 +192,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 13</td>
-				<td class="schedule-presentation">Amelia Denasiewicz</td>
+				<td class="schedule-presentation">Amelia Denasiewicz -  The Meaning of South Korean flag and Confucian Symbolism on It</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 14</td>
