--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -27,7 +27,7 @@
 				<th scope="col">Tydzień</th>
 				<th scope="col">Data</th>
 				<th scope="col">Rodzaj</th>
-				<th scope="col">Temat</th>
+				<th scope="col" colspan="2">Temat</th>
 			</tr>
 		</thead>
 
@@ -36,21 +36,19 @@
 				<th scope="row">1</th>
 				<td>18 października 2024</td>
 				<td class="schedule-lecture">Lekcja 1</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/1">powtórzenie materiału z poziomu podstawowego</a></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/1">powtórzenie materiału z poziomu podstawowego</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="3">2</th>
-				<td rowspan="3">22 października 2024</td>
-				<td class="schedule-lecture" rowspan="3">Lekcja 2</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">부침개 요리법 (przepis na placki koreańskie)</a></td>
-			</tr>
-			<tr>
+				<th scope="row" rowspan="2">2</th>
+				<td rowspan="2">22 października 2024</td>
+				<td class="schedule-lecture" rowspan="2">Lekcja 2</td>
 				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">01. 무슨 음식을 좋아해요</a></td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">부침개 요리법 (przepis na placki koreańskie)</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-3">02. 도서관에 책을 빌리러 가요</a></td>
+				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-3">02. 도서관에 책을 빌리러 가요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
@@ -63,7 +61,7 @@
 				<th scope="row">4</th>
 				<td>15 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 4</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/3">03. 백화점에서 쇼핑할 거예요</a></td>
+				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/3">03. 백화점에서 쇼핑할 거예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
@@ -77,11 +75,13 @@
 				<td>29 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 6</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4">04. 더 큰 사이즈는 없어요?</a></td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4-1">Tygrys jako symbol Korei</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
 				<td>6 grudnia 2024</td>
 				<td class="schedule-lecture">Lekcja 7</td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4-2">Kultura kłaniania się</a></td>
 			</tr>
 		</tbody>
 		<tbody>
