--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -68,31 +68,22 @@
 				<th scope="row">5</th>
 				<td>21 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 5</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/5">1과. 안녕하세요? 저는 안나예요.</a></td>
+				<td class="schedule-lecture" rowspan="4"><a href="viiilo/zajecia/24-25z/jk1/zajecia/5">1과. 안녕하세요? 저는 안나예요.</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>28 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 6</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">7</th>
 				<td>5 grudnia 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 7</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">8</th>
 				<td>12 grudnia 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 8</td>
 			</tr>
 		</tbody>
 		<tbody>
