--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -354,7 +354,7 @@
 		<li>로봇의 등장으로 인간의 지식 노동 시간이 감소하게 될 것이다.</li>
 		<li>로봇의 등장으로 인간은 육체노동의 시간을 줄일 수 있을 것이다.</li>
 		<li>로봇의 등장으로 인간의 노동력 시장 규모가 점점 축소될 것이다.</li>
-		<li>로봇의 등장으로 인간은 질적인 업무에 집중할 수 있게 될 것이다.</li>
+		<li>로봇의 등장으로 인간은 질적인 업무에 집중할 수 있게 될 것이다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -388,7 +388,7 @@
 	</div>
 	<ol>
 		<li>초창기 이모티콘은 대부분 얼굴 표정을 나타내는 것이었다.</li>
-		<li>이모티콘은 감정을 표현하는 또 하나의 언어로 자리 잡았다.</li>
+		<li>이모티콘은 감정을 표현하는 또 하나의 언어로 자리 잡았다. <strong class="correct">✓</strong></li>
 		<li>이모티콘의 지속적인 사용은 언어 표현력을 떨어뜨릴 수 있다.</li>
 		<li>이제는 이모티콘이 없으면 메시지를 주고받기 어려울 정도이다.</li>
 	</ol>
@@ -422,7 +422,7 @@
 		<li>법안이 가진 본래의 취지를 널리 알려야 한다.</li>
 		<li>피해 정도에 따라 처벌의 수위를 조절해야 한다.</li>
 		<li>새 법안의 통과가 더 이상 미루어져서는 안 된다.</li>
-		<li>새 법안은 실질적 효과를 거두는 데 미흡한 점이 있다.</li>
+		<li>새 법안은 실질적 효과를 거두는 데 미흡한 점이 있다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
