--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -203,8 +203,8 @@
 			<tr>
 				<th scope="row">12</th>
 				<td>4 June 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/11">discrimination of foreigners in South Korea</a></td>
+				<td class="schedule-lecture">discrimination of foreigners in South Korea</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/11">외국인 혐오, 대한민국의 외교·경제를 좀먹는다</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">13</th>
