--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -87,19 +87,20 @@
 				<th scope="row">3</th>
 				<td>21 października 2025</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/2">literatura</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/2">literatura</a></td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
-				<td>28 października 2025</td>
-				<td class="schedule-lecture">Zajęcia 4</td>
-				<td class="schedule-lecture"></td>
+				<th rowspan="2" scope="row">4</th>
+				<td rowspan="2">28 października 2025</td>
+				<td rowspan="2" class="schedule-lecture">Zajęcia 4</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/3">kulinaria</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
 				<td>4 listopada 2025</td>
 				<td class="schedule-lecture">Zajęcia 5</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">6</th>
