--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -87,13 +87,12 @@
 				<th scope="row">3</th>
 				<td>21 October 2025</td>
 				<td class="schedule-lecture">Lecture 3</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/2">The Four Books</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/licc/lectures/2">The Four Books</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
 				<td>28 October 2025</td>
 				<td class="schedule-lecture">Lecture 4</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
