--- a/uj/zajecia/25-26z/assk/zajecia/2/index.html
+++ b/uj/zajecia/25-26z/assk/zajecia/2/index.html
@@ -15,12 +15,65 @@
 
 <h2>Cho Se-hui - Niewielka kula, którą podrzucił w górę karzeł</h2>
 
+<h3>Wioska Guryeong w dzielnicy Gangnam w Seulu</h3>
+
 <ul class="gallery">
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/구룡마을1.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/구룡마을1.jpg" alt="구룡마을.jpg"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/구룡마을2.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/구룡마을2.jpg" alt="구룡마을2.jpg"></a></li>
+</ul>
+
+<h3>Cud nad rzeką Han</h3>
+
+<ul class="gallery">
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/한강의기적.webp"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/한강의기적.webp" alt="한강의 기적"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/경제성장.webp"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/경제성장.webp" alt="경제 성장.webp"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/경제성장통계.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/경제성장통계.jpg" alt="경제성장통계"></a></li>
+</ul>
+
+<ul>
+	<li>wartość PKB:
+		<ul>
+			<li>1,3 mld USD w 1953 r.</li>
+			<li>10 mld USD w 1972 r.</li>
+			<li>500 mld USD w 1995 r.</li>
+			<li>1,300 bln USD w 2013 r.</li>
+		</ul>
+	</li>
+	<li>liczba populacji:
+		<ul>
+			<li>20 mln w 1949 r.</li>
+			<li>51 mln w 2014 r.</li>
+		</ul>
+	</li>
+	<li>wartość handlu zagranicznego:
+		<ul>
+			<li>240 mln USD w 1952 r.</li>
+			<li>1,1 bln USD w 2014 r.</li>
+		</ul>
+	</li>
+	<li>rezerwy walutowe:
+		<ul>
+			<li>160 mln USD w 1960 r.</li>
+			<li>350 mln USD w 2014 r.</li>
+		</ul>
+	</li>
+	<li>liczba telefonów komórkowych:
+		<ul>
+			<li>14 mln w 1998 r.</li>
+			<li>57 mln w 2014 r.</li>
+		</ul>
+	</li>
+	<li>liczba zarejestrowanych samochodów:
+		<ul>
+			<li>18 tys. w 1955 r.</li>
+			<li>20 mln w 2014 r.</li>
+		</ul>
+	</li>
+</ul>
+
+<h3>Nierówności ekonomiczne</h3>
+
+<ul class="gallery">
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/노인빈곤율.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/노인빈곤율.jpg" alt="노인 빈곤율.jpg"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/사회계층이동.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/사회계층이동.jpg" alt="사회계층이동.jpg"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/2/img/superrich1.webp"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/superrich1.webp" alt="super rich 1"></a></li>
@@ -29,6 +82,13 @@
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/YjKRRdKg9Es"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/YjKRRdKg9Es.webp" alt="How do people in shanty town of Korea survive through cold winter?"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/VYuJGYJVA_o"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/VYuJGYJVA_o.webp" alt="Elderly citizens in S. Korea fighting hunger amid inflation"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/0tD83fgPiC0"><img src="uj/zajecia/25-26z/assk/zajecia/2/img/0tD83fgPiC0.webp" alt="[VIDEOMUG] 어떻게 이런 곳에서 사람이 살지?…청계천 70년대 / SBS"></a></li>
+</ul>
+
+<ul>
+	<li>18% Koreańczyków uważa, że osoby najbiedniejsze mają wystarczająco możliwości awansu do klasy średniej.</li>
+	<li>51% Koreańczyków uważa, że awans społeczny będzie niemożliwy.</li>
+	<li>58% Koreańczyków uważa, że liczba osób przynależących do klasy średniej zmniejszy się.</li>
+	<li>81% Koreańczyków uważa, że nierówności społeczne zwiększą się.</li>
 </ul>
 
 <h3>Fragment 1</h3>
