--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -246,8 +246,8 @@
 				<th scope="row">12</th>
 				<td>17 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">mobbing</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/11">"에어컨은 손님 있을때만"…'냉방 갑질' 시달리는 근로자들</a></td>
 			</tr>
 		</tbody>
 		<tbody>
