--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -278,8 +278,8 @@
 				<th scope="row">12</th>
 				<td>17 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">społeczeństwo</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/10">비만해도 살 안 빼는 한국 남자 vs 저체중인데 다이어트 하는 한국 여자</a></td>
 			</tr>
 		</tbody>
 		<tbody>
