--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
@@ -224,7 +224,7 @@
 	</div>
 	<ol>
 		<li>두께를 자율적으로</li>
-		<li>디자인을 신중하게</li>
+		<li>디자인을 신중하게 <strong class="correct">✓</strong></li>
 		<li>이용 범위를 확실히</li>
 		<li>발급 방식을 구체적으로</li>
 	</ol>
@@ -237,7 +237,7 @@
 	<ol>
 		<li>살던 텃새가 줄어든</li>
 		<li>한국의 텃새가 사라진</li>
-		<li>일본의 텃새가 관찰된</li>
+		<li>일본의 텃새가 관찰된 <strong class="correct">✓</strong></li>
 		<li>부상당한 텃새가 보호된</li>
 	</ol>
 </div>
@@ -252,11 +252,11 @@
 		<li>과연</li>
 		<li>비록</li>
 		<li>차라리</li>
-		<li>오히려</li>
+		<li>오히려 <strong class="correct">✓</strong></li>
 	</ol>
 	<h3>20. 윗글의 주제로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>마케팅도 중요하지만 제품의 품질이 더 중요하다.</li>
+		<li>마케팅도 중요하지만 제품의 품질이 더 중요하다. <strong class="correct">✓</strong></li>
 		<li>식품 기업은 먼저 소비자의 요구를 확인해야 한다.</li>
 		<li>제품에 재미 요소를 포함하는 마케팅 전략이 필요하다.</li>
 		<li>특이한 제품보다 소비자에게 익숙한 것이 홍보에 더 좋다.</li>
