--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index.html
@@ -19,14 +19,14 @@
 	<ol>
 		<li>먹든지</li>
 		<li>먹거나</li>
-		<li>먹고 나서</li>
+		<li>먹고 나서 <strong class="correct">✓</strong></li>
 		<li>먹다 보면</li>
 	</ol>
 </div>
 <div class="exam-question">
 	<h4>2. 퇴근 후에 집에 와 보니까 동생이 여행에서 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
 	<ol>
-		<li>돌아와 있었다</li>
+		<li>돌아와 있었다 <strong class="correct">✓</strong></li>
 		<li>돌아오게 되었다</li>
 		<li>돌아왔으면 했다</li>
 		<li>돌아오도록 했다</li>
@@ -37,7 +37,7 @@
 	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
 	<h4>3. 아침에 늦게 <u>일어나는 바람에</u> 기차를 놓쳤다.</h4>
 	<ol>
-		<li>일어난 탓에</li>
+		<li>일어난 탓에 <strong class="correct">✓</strong></li>
 		<li>일어난 김에</li>
 		<li>일어나는 대신</li>
 		<li>일어나는 대로</li>
@@ -48,7 +48,7 @@
 	<ol>
 		<li>나오는 김에</li>
 		<li>나오는 사이에</li>
-		<li>나오는 바람에</li>
+		<li>나오는 바람에 <strong class="correct">✓</strong></li>
 		<li>나오는 대신에</li>
 	</ol>
 </div>
@@ -58,7 +58,7 @@
 	<h4>5. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/5.png" alt="5"></h4>
 	<ol>
 		<li>병원</li>
-		<li>은행</li>
+		<li>은행 <strong class="correct">✓</strong></li>
 		<li>여행사</li>
 		<li>체육관</li>
 	</ol>
