--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -49,172 +49,173 @@
 
 <h2>Plan zajęć w semestrze zimowym 2025/2026</h2>
 
+<h3>Czytanie</h3>
+
 <div class="class-schedule-container">
 	<table class="class-schedule">
 		<thead>
 			<tr>
 				<th scope="col">주</th>
 				<th scope="col">날짜</th>
-				<th scope="col">종류</th>
 				<th scope="col">제목</th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">1</th>
-				<td rowspan="2">2025년 10월 8일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
+				<th scope="row">1</th>
+				<td>2025년 10월 8일</td>
+				<td rowspan="4" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/1">한자 입문</a></td>
+				<th scope="row">2</th>
+				<td>2025년 10월 15일</td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">2</th>
-				<td rowspan="2">2025년 10월 15일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
+				<th scope="row">3</th>
+				<td>2025년 10월 22일</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture">한자 복습</td>
+				<th scope="row">4</th>
+				<td>2025년 10월 29일</td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">3</th>
-				<td rowspan="2">2025년 10월 22일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
+				<th scope="row">5</th>
+				<td>2025년 11월 5일</td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2">시험지 2</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
+				<th rowspan="2" scope="row">6</th>
+				<td rowspan="2">2025년 11월 19일</td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">4</th>
-				<td rowspan="2">2025년 10월 29일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">5</th>
-				<td rowspan="2">2025년 11월 5일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2">시험지 2</a></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="4">6</th>
-				<td rowspan="4">2025년 11월 19일</td>
-				<td class="schedule-exam">읽기</td>
 				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/czytanie/1">시험 1</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2">시험지 2</a></td>
+				<th scope="row">7</th>
+				<td>2025년 11월 26일</td>
+				<td rowspan="3" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">한자</td>
+				<th scope="row">8</th>
+				<td>2025년 12월 3일</td>
+			</tr>
+			<tr>
+				<th scope="row">9</th>
+				<td>2025년 12월 10일</td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="2">10</th>
+				<td rowspan="2">2025년 12월 17일</td>
+				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/czytanie/2">시험 2</a></td>
+			</tr>
+			<tr>
+				<td rowspan="4" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4">시험지 4</a></td>
+			</tr>
+			<tr>
+				<th scope="row">11</th>
+				<td>2026년 1월 14일</td>
+			</tr>
+			<tr>
+				<th scope="row">12</th>
+				<td>2025년 1월 21일</td>
+			</tr>
+			<tr>
+				<th scope="row">13</th>
+				<td>2025년 1월 28일</td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>2025년 2월 4월</td>
+				<td class="schedule-exam">기말시험</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+<h3>Znaki chińskie</h3>
+
+<div class="class-schedule-container">
+	<table class="class-schedule">
+		<thead>
+			<tr>
+				<th scope="col">주</th>
+				<th scope="col">날짜</th>
+				<th scope="col">제목</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<th scope="row">1</th>
+				<td>2025년 10월 8일</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/1">한자 입문</a></td>
+			</tr>
+			<tr>
+				<th scope="row">2</th>
+				<td>2025년 10월 15일</td>
+				<td class="schedule-lecture">한자 복습</td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td>2025년 10월 22일</td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
+			</tr>
+			<tr>
+				<th scope="row">4</th>
+				<td>2025년 10월 29일</td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>2025년 11월 5일</td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="2">6</th>
+				<td rowspan="2">2025년 11월 19일</td>
+			</tr>
+			<tr>
 				<td class="schedule-exam">시험 1</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
+				<th scope="row">7</th>
+				<td>2025년 11월 26일</td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">7</th>
-				<td rowspan="2">2025년 11월 26일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
+				<th scope="row">8</th>
+				<td>2025년 12월 3일</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
+				<th scope="row">9</th>
+				<td>2025년 12월 10일</td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/4">食 밥 식</a></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">8</th>
-				<td rowspan="2">2025년 12월 3일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
+				<th rowspan="2" scope="row">10</th>
+				<td rowspan="2">2025년 12월 17일</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">9</th>
-				<td rowspan="2">2025년 12월 10일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/4">食 밥 식</a></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="4">10</th>
-				<td rowspan="4">2025년 12월 17일</td>
-				<td class="schedule-exam">읽기</td>
 				<td class="schedule-exam">시험 2</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">읽기</td>
+				<th scope="row">11</th>
+				<td>2026년 1월 14일</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">한자</td>
-				<td class="schedule-exam">시험 2</td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
+				<th scope="row">12</th>
+				<td>2025년 1월 21일</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">11</th>
-				<td rowspan="2">2026년 1월 14일</td>
-				<td class="schedule-lecture">읽기</td>
+				<th scope="row">13</th>
+				<td>2025년 1월 28일</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">12</th>
-				<td rowspan="2">2025년 1월 21일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">13</th>
-				<td rowspan="2">2025년 1월 28일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">14</th>
-				<td rowspan="2">2025년 2월 4월</td>
-				<td class="schedule-exam">읽기</td>
-				<td class="schedule-exam">기말시험</td>
-			</tr>
-			<tr>
-				<td class="schedule-exam">한자</td>
+				<th scope="row">14</th>
+				<td>2025년 2월 4월</td>
 				<td class="schedule-exam">기말시험</td>
 			</tr>
 		</tbody>
