--- a/uj/zajecia/25-26z/ljk4/testy/znaki/2/index5435435435.html
+++ b/uj/zajecia/25-26z/ljk4/testy/znaki/2/index5435435435.html
@@ -11,24 +11,24 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (znaki chińskie)</h1>
-
-<h2>Kolokwium 2</h2>
-
 <div class="exam-question">
+	<h1>Lektorat języka koreańskiego - poziom 4 (znaki chińskie)</h1>
+
+	<h2>Kolokwium 2</h2>
+
 	<h3>1. Zastąp podkreślone w zdaniach znaki chińskie hangulem. (10 pkt.)</h3>
 
 	<ol>
-		<li style="padding: 1em 0">정보통신은 한국에서 가장 발달된 <u>分野</u>이다.</li>
-		<li style="padding: 1em 0">의사소통할 때는 <u>文法</u>이 제일 중요한 부분이다.</li>
-		<li style="padding: 1em 0">제가 바빠서 전화받지 못하면 <u>文字</u>를 좀 보내주세요.</li>
-		<li style="padding: 1em 0">피부 건강을 위해서는 <u>水分</u>을 많이 섭취하는 것이 좋다.</li>
-		<li style="padding: 1em 0">한류 덕에 한국 문화는 외국에서 <u>部分</u>적으로 유명해졌다.</li>
-		<li style="padding: 1em 0">아시아와 유럽 해안에 <u>分布</u>하는 식물의 종류는 석창포이다.</li>
-		<li style="padding: 1em 0">부모가 돌아가신 후에는 자녀 사이에 재산을 <u>分配</u>해야 한다.</li>
-		<li style="padding: 1em 0">사장님이 신입직원들에게 업무를 새로 <u>分擔</u>하셔서 그들은 많이 떨린다.</li>
-		<li style="padding: 1em 0">오늘 숙제로 500자의 작문을 써야 하니 <u>分量</u>은 어제보다 크게 늘어났다.</li>
-		<li style="padding: 1em 0">한반도는 70년 동안 대한민국과 조선민주주의인민공화국으로 <u>分斷</u>되어 왔다.</li>
+		<li style="padding: 1em 0">食<u>費</u>는 대학생들의 생활비에서 큰 비중을 차지한다.</li>
+		<li style="padding: 1em 0">건강을 유지하기 위해서는 규칙적인 食<u>事</u>가 필수이다.</li>
+		<li style="padding: 1em 0">어머니는 시간이 갈수록 건강 食<u>品</u>에 관심이 높아지셨다.</li>
+		<li style="padding: 1em 0">한국어를 공부할 때는 文<u>章</u>을 번역하는 것이 가장 어렵다.</li>
+		<li style="padding: 1em 0"><u>原</u>文을 너무 의역하면 번역에는 많은 차이가 생길 수 있다.</li>
+		<li style="padding: 1em 0">날씨가 너무 더우면 食<u>慾</u>이 떨어져 아무것도 먹고 싶지 않다.</li>
+		<li style="padding: 1em 0">과거에 바닥에 앉아서 밥을 먹었지만 요즘은 食<u>卓</u>에서 먹는다.</li>
+		<li style="padding: 1em 0">이번 금요일에 다 같이 고급 食<u>堂</u>에서 회식하는 건 어떨까요?</li>
+		<li style="padding: 1em 0">학생들은 文<u>具店</u>에서 공책과 볼펜을 저렴하게 구매할 수 있다.</li>
+		<li style="padding: 1em 0">언어를 공부할 때는 <u>例</u>文을 통해서 단어를 쉽게 외울 수 있다.</li>
 	</ol>
 </div>
 
@@ -38,34 +38,37 @@
 	<h3>2. Zastąp podkreślone w zdaniach słowa znakami chińskimi. (10 pkt.)</h3>
 
 	<ul style="columns: 5">
-		<li>氣分</li>
-		<li>分類</li>
-		<li>分析</li>
-		<li>德分</li>
-		<li>區分</li>
-		<li>充分</li>
-		<li>成分</li>
-		<li>分離</li>
-		<li>親分</li>
-		<li>文脈</li>
+		<li>作</li>
+		<li>公</li>
+		<li>化</li>
+		<li>器</li>
+		<li>書</li>
+		<li>注</li>
+		<li>漢</li>
+		<li>糧</li>
+		<li>論</li>
+		<li>醋</li>
 	</ul>
 
 	<ol>
-		<li style="padding: .25em 0;">생명체를 구성하는 가장 중요한 <u>성분</u>은 물이다.</li>
-		<li style="padding: .25em 0;">고등학교 때부터 오랫동안 그분과 <u>친분</u>이 있었다.</li>
-		<li style="padding: .25em 0;">저녁에 운동장에서 친구와 운동하면 <u>기분</u>이 좋아진다.</li>
-		<li style="padding: .25em 0;">실패 원인을 <u>분석</u>한 결과는 우리 팀의 연습 부족이었다.</li>
-		<li style="padding: .25em 0;">설날에 오는 가족을 위해서는 음식을 <u>충분</u>히 준비해야 한다.</li>
-		<li style="padding: .25em 0;">대학생들은 한국어 수업에서 문법 수준에 따라 <u>구분</u>할 수 있다.</li>
-		<li style="padding: .25em 0;">휴가 때 자원봉사로 도서관에서 모든 책을 주제에 따라 <u>분류</u>했다.</li>
-		<li style="padding: .25em 0;">많은 사람들이 한국 드라마를 보는 <u>덕분</u>에 한국말은 요즘 인기가 높아졌다.</li>
-		<li style="padding: .25em 0;">내용을 이해하지 못할 때는 단어의 의미를 <u>문맥</u>에서 알아내는 것이 좋은 방법이다.</li>
-		<li style="padding: .25em 0;">자리를 흡·금역석으로 <u>분리</u>해 담배의 연기가 식사하는 손님에게 피해를 주지 않는다.</li>
+		<li style="padding: .25em 0;"><u>한</u>문은 한국 중학교에서 선택과목이다.</li>
+		<li style="padding: .25em 0;">보건복지부에서는 청년단체에 <u>공</u>문을 보냈다.</li>
+		<li style="padding: .25em 0;">쓰기 수업 덕분에 <u>작</u>문 실력이 좋아지고 있어요.</li>
+		<li style="padding: .25em 0;">전쟁에서 달아나는 난민들에게는 식<u>량</u>이 절실하다.</li>
+		<li style="padding: .25em 0;">대학원을 졸업하려면 <u>논</u>문 심사에 반드시 합격해야 한다.</li>
+		<li style="padding: .25em 0;">일주일 전에 작성한 학술 문<u>서</u>를 컴퓨터에 보관하고 있다.</li>
+		<li style="padding: .25em 0;">제품을 저렴하게 구매하려면 인터넷에서 <u>주</u>문하는 것이 좋다.</li>
+		<li style="padding: .25em 0;">간장과 고춧가루로 양념장을 만든 후에는 식<u>초</u>를 조금 넣었어요.</li>
+		<li style="padding: .25em 0;">문<u>화</u>를 잘 이해하기 위해서는 언어를 배우는 것이 좋은 방법이다.</li>
+		<li style="padding: .25em 0;">아버지께서는 진지를 잡수신 후에 식<u>기</u>를 항상 깨끗이 씻고 보관하셔요.</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>Bonus. Wyjaśnij, z jakich znaków chińskich składa się słowo „식구” oraz czym różni się od słowa „가족”. (2 pkt.)</h3>
+	<h3>Bonus 1. Wyjaśnij, dlaczego znak 英 jest używany w odniesieniu do Wielkiej Brytanii oraz języka angielskiego. (1 pkt.)</h3>
+	<p>.............................................................................................................................</p>
+	<p>.............................................................................................................................</p>
+	<h3>Bonus 2. Wyjaśnij, z jakich znaków chińskich składa się słowo „식구” oraz czym różni się od słowa „가족”. (1 pkt.)</h3>
 	<p>.............................................................................................................................</p>
 	<p>.............................................................................................................................</p>
 </div>
