--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -74,7 +74,7 @@
 				<th scope="row">6</th>
 				<td>29 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 6</td>
-				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4">04. 더 큰 사이즈는 없어요?</a></td>
+				<td class="schedule-lecture" rowspan="5"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4">04. 더 큰 사이즈는 없어요?</a></td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4-1">한국의 상징 호랑이 (tygrys jako symbol Korei)</a></td>
 			</tr>
 			<tr>
@@ -90,25 +90,21 @@
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2">손글씨 (pismo odręczne)</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3">높임법 (honoryfikatywność)</a></td>
-			</tr>
-			<tr>
 				<td class="schedule-presentation"><a href="https://ultimatekorean.com/ukr/012">단위 명사 (klasyfikatory)</a></td>
 			</tr>
 			<tr>
-				<th scope="row">9</th>
-				<td>20 grudnia 2024</td>
-				<td class="schedule-lecture">Lekcja 9</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3">높임법 (honoryfikatywność)</a></td>
 			</tr>
-		</tbody>
-		<tbody>
+			<tr>
+				<th scope="row">9</th>
+				<td>19 grudnia 2024</td>
+				<td class="schedule-lecture">Lekcja 9</td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
+			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>10 stycznia 2024</td>
 				<td class="schedule-lecture">Lekcja 10</td>
-				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
