--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -110,7 +110,7 @@
 				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/czytanie/2">시험 2</a></td>
 			</tr>
 			<tr>
-				<td rowspan="4" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4">시험지 4</a></td>
+				<td rowspan="3" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4">시험지 4</a></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -123,6 +123,7 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>2025년 1월 28일</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/5">문법 연습</a></td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
@@ -201,7 +202,7 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>2026년 1월 14일</td>
-				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/5">一 한 일</a></td>
+				<td rowspan="3" class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/5">一 한 일</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
@@ -210,7 +211,6 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>2025년 1월 28일</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
