--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -146,28 +146,24 @@
 				<th scope="row">18</th>
 				<td>16 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/9">09. 집에서 푹 쉬어야 돼요</a></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/9">09. 집에서 푹 쉬어야 돼요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">19</th>
 				<td>23 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
 				<td>30 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/10">10. 학교에 가기 전에 수영을 해요</a></td>
+				<td class="schedule-presentation" rowspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">21</th>
 				<td>6 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<th scope="row">22</th>
